2003-03-28  Larry Ewing  <lewing@ximian.com>

	* configure.in: add --enable-shli-factory back option back in.

2003-03-27  Larry Ewing  <lewing@ximian.com>

	* configure.in: fix the library location.

2003-03-16  Larry Ewing  <lewing@ximian.com>

	* configure.in: remove server.in from AC_OUTPUT.

2003-03-15  Larry Ewing  <lewing@ximian.com>

	* configure.in (GNOME_GTKHTML_EDITOR_LOCATION): add an explicit
	prefix to the editor location.

2003-02-12  Larry Ewing  <lewing@ximian.com>

	* configure.in: bump version to 3.0.1
	
	* configure.in (GETTEXT_PACKAGE): work around intltool bug that
	pulls GETTEXT_PACAKAGE out of configure.in without doing variable
	substitution.

2003-02-07  Larry Ewing  <lewing@ximian.com>

	* configure.in: fix the GETTEXT_PACKAGE mess and define
	GNOME_EXPLICIT_TRANSLATION_DOMAIN.

	* acconfig.h: add GNOME_EXPLICIT_TRANSLATION_DOMAIN.

2003-01-22  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in: Added Amharic (am) and Arabic (ar) to ALL_LINGUAS

2003-01-13  Rodney Dawes  <dobey@ximian.com>

	* src/Makefile.am: Handle $(DESTDIR) when moving the libgtkhtml.pc file
	
2003-01-13  Rodney Dawes  <dobey@ximian.com>

	* configure.in: Remove the capplet stuff
	
2003-01-10  Naba Kumar  <naba@gnome.org>

	* configure.in: Added hi (hindi) in ALL_LINGUAS
	
2002-11-28  Bastien Nocera  <hadess@hadess.net>

	* configure.in: added GETTEXT_PACKAGE substitution, so the .po files
	install correctly

2002-11-05  Larry Ewing  <lewing@ximian.com>

	* configure.in: look four soup-2.0 

2002-11-05  Radek Doulik  <rodo@ximian.com>

	* configure.in: added SOUP pkgconfig stuff

2002-06-03  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in: Added Catalan (ca) to ALL_LINGUAS

2002-05-15  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in: Added Vietnamese (vi) to ALL_LINGUAS

2002-03-15  Radek Doulik  <rodo@ximian.com>

	* configure.in: added EDITOR_API_VERSION

	* acconfig.h: added EDITOR_API_VERSION
