@@ -6,11 +6,12 @@ AM_CONFIG_HEADER(config.h)
 PACKAGE=gtkhtml
 
 GTKHTML_RELEASE=3.0
-AC_DEFINE_UNQUOTED(GTKHTML_RELEASE, "${GTKHTML_RELEASE}")
+AC_DEFINE_UNQUOTED(GTKHTML_RELEASE, "${GTKHTML_RELEASE}", [GtkHTML Release])
 AC_SUBST(GTKHTML_RELEASE)
 
 GTKHTML_RELEASE_STRING=${PACKAGE}-${GTKHTML_RELEASE}
-AC_DEFINE_UNQUOTED(GTKHTML_RELEASE_STRING, "${GTKHTML_RELEASE_STRING}")
+AC_DEFINE_UNQUOTED(GTKHTML_RELEASE_STRING, "${GTKHTML_RELEASE_STRING}",
+					   [GtkHTML Release String])
 AC_SUBST(GTKHTML_RELEASE_STRING)
 
 dnl because intltool has an extremely broken way of getting the
@@ -21,12 +22,12 @@ GETTEXT_PACKAGE=gtkhtml-3.0
 AC_SUBST(GETTEXT_PACKAGE)
 
 GNOME_EXPLICIT_TRANSLATION_DOMAIN=${GTKHTML_RELEASE_STRING}
-AC_DEFINE_UNQUOTED(GNOME_EXPLICIT_TRANSLATION_DOMAIN, "${GNOME_EXPLICIT_TRANSLATION_DOMAIN}")
+AC_DEFINE_UNQUOTED(GNOME_EXPLICIT_TRANSLATION_DOMAIN, "${GNOME_EXPLICIT_TRANSLATION_DOMAIN}", [Gnome Explicit Translation Domain])
 
 AM_INIT_AUTOMAKE($PACKAGE, $GTKHTML_RELEASE.1)
 
 EDITOR_API_VERSION=3.0
-AC_DEFINE_UNQUOTED(EDITOR_API_VERSION, "${EDITOR_API_VERSION}")
+AC_DEFINE_UNQUOTED(EDITOR_API_VERSION, "${EDITOR_API_VERSION}", [Editor API Version])
 AC_SUBST(EDITOR_API_VERSION)
 
 AM_MAINTAINER_MODE
@@ -55,7 +56,7 @@ AC_SUBST(GAIL_CFLAGS)
 AC_SUBST(GAIL_LIBS)
 AC_SUBST(GAIL_MODULES)
 
-GTKHTML_MODULES="libgnomeui-2.0 >= 1.112.1 libgnomeprint-2.2 >= 2.2.0 libgnomeprintui-2.2 >= 2.2.1"
+GTKHTML_MODULES="libgnomeui-2.0 >= 1.112.1 libgnomeprint-2.2 >= 2.2.0 libgnomeprintui-2.2 >= 2.2.1 libglade-2.0 >= 2.0.1"
 PKG_CHECK_MODULES(GTKHTML, $GTKHTML_MODULES)
 AC_SUBST(GTKHTML_CFLAGS)
 AC_SUBST(GTKHTML_LIBS)
@@ -98,10 +99,8 @@ AC_ARG_ENABLE(shlib-factory, [  --enable-shlib-factory  build editor factory as 
 if test "x$shlib_factory" = "xyes"; then
 	GNOME_GTKHTML_EDITOR_SHLIB=1
 	GNOME_GTKHTML_EDITOR_TYPE="shlib"
-	GNOME_GTKHTML_EDITOR_LOCATION="${libdir}/libgnome-gtkhtml-editor-${EDITOR_API_VERSION}.so"
-	AC_DEFINE(GNOME_GTKHTML_EDITOR_SHLIB)
+	AC_DEFINE(GNOME_GTKHTML_EDITOR_SHLIB,, [Editor shlib])
 else
-	GNOME_GTKHTML_EDITOR_LOCATION="${libexecdir}/gnome-gtkhtml-editor-${EDITOR_API_VERSION}"
 	GNOME_GTKHTML_EDITOR_TYPE="exe"
 fi
 
